--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,62 @@ header .no-padding{
      overflow: hidden;
     /*margin-right: -0.6%;    */
 }
+
+#intro{
+    padding: 100px 150px 100px 100px;
+    text-align: center;
+    transition:all 1s ease;
+    opacity: 0.9;
+}
+
+#intro:hover{
+    color: black;
+    opacity: 1;
+     box-shadow: inset 0 0 0 2px #53a7ea;
+
+}
+
+.navbar {
+    z-index: 1;
+    background-color: transparent;
+    transition:all 1s ease;
+}
+.top-nav-collapse {
+    background-color: #4285F4;
+}
+.navbar:hover{
+    background: white;
+}
+
+.navbar a{
+    transition:all 1s ease;
+}
+.navbar a:hover {
+    box-shadow: inset 0 0 0 2px #53a7ea;
+    /*background-color: #53a7ea*/
+
+}
+@media only screen and (max-width: 768px) {
+.navbar {
+        background-color: #4285F4;
+    }
+}
+* { margin:0; padding:0; box-sizing:border-box; }
+
+#experience_tab .nav-pills > li > a {
+border-radius: 4px 4px 0 0 ;
+}
+
+#experience_tab .tab-content {
+color : black;
+background-color: #9ad3de;
+padding : 5px 15px;
+}
+
+header a{
+    display: block;
+    color: black;
+}
           
 body {
     font-family: 'Lato';font-size: 18px;
@@ -94,8 +150,12 @@ input[type=text], input[type=password] {
         box-sizing: border-box;
 }
 
-section#experience .grid_6 .container_4{
-    background-color: #e5e5e6;
+section#link_experience {
+    background-color: #f6f1ed;
+}
+
+section#link_education{
+    background-color: #c0dfd9
 }
 
 /*author note: changed*/
@@ -171,11 +231,23 @@ section#experience .grid_6 .container_4{
   height: 200px;
 }
 /* cover h1 text 3d effect*/
-.cover h1{
+/*.cover h1{
   font-size: 50px;
   text-shadow: grey 3px 2px;
-  /*text-shadow: 0 0 5px rgba(0,0,0,0.5);*/
+  /*text-shadow: 0 0 5px rgba(0,0,0,0.5);
   color: white;
+}*/
+
+#cover{
+    background-color: #e8edf3;
+    /*background: url('../img/background.jpg') no-repeat center center fixed;*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: inherit;
+  height: inherit;
+  margin-top: -25px;
 }
 
 .tab-pane {
@@ -185,5 +257,10 @@ section#experience .grid_6 .container_4{
 }
 
 .tab-pane a{
-    color: #D0EAEC;
+    color: #22264b;
 }
+
+.hide{
+    display: none;
+}
+
