--- a/css/style.css
+++ b/css/style.css
@@ -112,10 +112,6 @@ section h3{
       font-size: 40px;
 }
 
-footer .footer_css{
-    background-color: #0F7686;
-    margin: 30px 0px 0px 0px
-}
 
 #socialicons {
         text-align: center;
@@ -136,7 +132,7 @@ footer .footer_css{
 /* changed  */
 #socialicons .icon:hover{
         border: 1px solid #CFCFCF;
-         color: white;
+         color: #008CBA;
 }
 
 
@@ -156,6 +152,10 @@ section#link_experience {
 
 section#link_education{
     background-color: #c0dfd9
+}
+
+section#link_education .span6{
+    padding: 10px 100px 10px 100px;
 }
 
 /*author note: changed*/
@@ -264,3 +264,30 @@ section#link_education{
     display: none;
 }
 
+
+@keyframes bottomFadeOut {
+  0% {
+    position: absolute;
+    bottom: -5rem;
+    opacity: 0;
+  }
+
+  75% {
+    position: absolute;
+    bottom: 50%;
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+  
+}
+
+.intro-text {
+  position: absolute;
+  opacity:1;
+  animation-name: bottomFadeOut;
+  animation-delay: 0s;
+  animation-duration: 3s;
+}
