--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ section#link_education .span6{
 .tab-pane {
     text-align:center;
     height:50vh;
-    padding: 50px 0px 10px 100px;
+    padding: 5vh 0px 0px 0px;
 
 }
 
